Revision history for CGI-Application-NetNewsIface

0.0101       Sat May 13 17:52:16 IDT 2006
    - Bumped version to 0.0101
    - First stable release.

0.0100_02    Sat May  6 20:50:08 IDT 2006
    - Added the cache for making the threads' lookup faster.
        - Currently DBI and DBD::SQLite only.
    - Added a thread display to the individual article view. 

0.0100_01    Sun Apr 16 23:16:54 IDT 2006
    - Now installing the templates.
        - Added the configured templates' directory to the tt_include_path.

0.0100_00    Sun Apr 16 18:24:36 IDT 2006
    - First version, released on an unsuspecting world.
